@@ -1,0 +1,13 @@
+#ifdef QUICK_LINK_URL
+<TD ALIGN="RIGHT">
+<A href="##QUICK_LINK_URL##">
+#ifdef QUICK_LINK_IMG
+<IMG BORDER="0" SRC="##QUICK_LINK_IMG##"
+                ALT="##QUICK_LINK_ALT##"
+              TITLE="##QUICK_LINK_ALT##"
+>
+#else
+##QUICK_LINK_ALT##
+#endif
+</a>
+#endif
